[gd_scene load_steps=3 format=3 uid="uid://k3csipi6igv0"]

[ext_resource type="Script" uid="uid://cfkg1illel7x0" path="res://addons/reaction/components/responses_edit_forms/ReactionUIMainResponseEditForm.gd" id="1_n7dsc"]
[ext_resource type="PackedScene" uid="uid://doabmy6rit131" path="res://addons/reaction/components/ReactionUISearchMenu.tscn" id="2_sa6ir"]

[node name="ReactionUIMainResponseEditForm" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1_n7dsc")

[node name="Rows" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Columns" type="HBoxContainer" parent="Rows"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Rows1" type="VBoxContainer" parent="Rows/Columns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelContainer" type="HBoxContainer" parent="Rows/Columns/Rows1"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Rows/Columns/Rows1/LabelContainer"]
layout_mode = 2
text = "Label:"

[node name="LabelInputLineEdit" type="LineEdit" parent="Rows/Columns/Rows1/LabelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="TriggersContainer" type="HBoxContainer" parent="Rows/Columns/Rows1"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="TriggersLabel" type="Label" parent="Rows/Columns/Rows1/TriggersContainer"]
layout_mode = 2
text = "Triggers:"

[node name="EventsSearchMenu" parent="Rows/Columns/Rows1/TriggersContainer" instance=ExtResource("2_sa6ir")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Rows2" type="VBoxContainer" parent="Rows/Columns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UidContainer" type="HBoxContainer" parent="Rows/Columns/Rows2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Rows/Columns/Rows2/UidContainer"]
layout_mode = 2
text = "Uid:"

[node name="UidLineEdit" type="LineEdit" parent="Rows/Columns/Rows2/UidContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[connection signal="text_submitted" from="Rows/Columns/Rows1/LabelContainer/LabelInputLineEdit" to="." method="_on_label_input_line_edit_text_submitted"]
